# ordinal-losses

./: README.md  setup.cfg
src/: example.py  ordinal_losses.py
src/ordinal_losses/: __init__.py
