[metadata]
name = ordinal_losses
version = 0.1
author = Ricardo Cruz
author_email = rpcruz@fe.up.pt
description = Implementation of ordinal losses for neural networks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rpmcruz/ordinal-losses
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
